fixed side gap bug & finetuning
Fixed the bug where a white border was shown on the sides.
Also did some finetuning & placed extra titles

--- a/Web/app/styles/common.css
+++ b/Web/app/styles/common.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* ALL EVA RELATED COLORS */
 /*
 $darkGreen: #0e2218;
@@ -145,8 +144,8 @@ html, body {
             border-top: 1px solid rgba(255, 255, 255, 0.1);
             border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
   #wrapper #main {
-    position: absolute;
-    left: 250px; }
+    margin-left: 250px;
+    width: 100%; }
 
 /*** Image replacing ***/
 h1 {
@@ -158,6 +157,13 @@ h1 {
   width: 132px;
   text-indent: -100%;
   margin: 10px auto 0 auto; }
+
+/*** GENERAL CLASSES ***/
+.box-border {
+  background: url("../images/resources/boxulc.png"), url("../images/resources/boxurc.png"), url("../images/resources/boxblc.png"), url("../images/resources/boxbrc.png");
+  background-position: 0% 0%, 100% 0%, 0% 100%, 100% 100%;
+  background-repeat: no-repeat;
+  background-size: 10%; }
 
 /*** PROGRESSBAR ***/
 #progressbar {
@@ -198,8 +204,8 @@ h1 {
   display: flex;
   flex-direction: row;
   -webkit-flex-direction: row;
-  flex-wrap: nowrap;
-  -webkit-flex-wrap: nowrap;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
   justify-content: center;
   -webkit-justify-content: center;
   align-items: center;
@@ -217,29 +223,24 @@ h1 {
     max-width: 32%; }
     #challenges article:first-of-type {
       margin-left: 0; }
-  #challenges .challenge {
-    background: url("../images/resources/boxulc.png"), url("../images/resources/boxurc.png"), url("../images/resources/boxblc.png"), url("../images/resources/boxbrc.png");
-    background-position: 0% 0%, 100% 0%, 0% 100%, 100% 100%;
-    background-repeat: no-repeat;
-    background-size: 10%; }
-    #challenges .challenge div {
-      margin: 1.3% 2% 1.3%;
-      height: 150px; }
-      #challenges .challenge div p {
-        font-family: Museo300, sans-serif;
-        font-size: 18px;
-        text-align: center;
-        color: #fff;
-        padding: 15% 5%;
-        line-height: 20px;
-        text-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
-        overflow: hidden; }
-    #challenges .challenge:hover {
-      transform: scale(1.055);
-      -o-transform: scale(1.055);
-      -webkit-transform: scale(1.055); }
+  #challenges .challenge div {
+    margin: 1.3% 2% 1.3%;
+    height: 150px; }
+    #challenges .challenge div p {
+      font-family: Museo300, sans-serif;
+      font-size: 18px;
+      text-align: center;
+      color: #fff;
+      padding: 15% 5%;
+      line-height: 20px;
+      text-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+      overflow: hidden; }
+  #challenges .challenge:hover {
+    transform: scale(1.055);
+    -o-transform: scale(1.055);
+    -webkit-transform: scale(1.055); }
   #challenges .pompoensoep {
-    background: url("../images/challenges/pompoensoep_kokoscrème_basilicum.jpg"), no-repeat;
+    background: url("../images/challenges/pompoensoep_kokoscreme_basilicum.jpg"), no-repeat;
     background-size: cover; }
   #challenges .knolselder {
     background: url("../images/challenges/knolseldersoep.jpg"), no-repeat;
@@ -267,6 +268,10 @@ h1 {
   width: 95%;
   padding: 40px 0;
   margin: 0 auto; }
+  #stats h4 {
+    font-family: Artistamp, sans-serif;
+    color: #fff;
+    font-size: 20px; }
   #stats div {
     flex-grow: 1;
     align-self: flex-start;
@@ -310,10 +315,6 @@ h1 {
       text-indent: -100%;
       overflow: hidden;
       float: left; }
-  #stats #latest-achievements h4 {
-    font-family: Artistamp, sans-serif;
-    color: #fff;
-    font-size: 20px; }
   #stats #latest-achievements .latest-achievement-badge {
     float: left;
     clear: both;
@@ -331,19 +332,19 @@ h1 {
       float: left; }
     #stats #latest-achievements .latest-achievement-badge .badge-easy {
       background: url("../images/resources/badges/easy.png");
-      background-color: rgba(14, 34, 24, 0.4);
+      background-color: rgba(255, 255, 255, 0.4);
       background-repeat: no-repeat;
       background-size: 90%;
       background-position: 50% 50%; }
     #stats #latest-achievements .latest-achievement-badge .badge-medium {
       background: url("../images/resources/badges/medium.png");
-      background-color: rgba(14, 34, 24, 0.4);
+      background-color: rgba(255, 255, 255, 0.4);
       background-repeat: no-repeat;
       background-size: 90%;
       background-position: 50% 50%; }
     #stats #latest-achievements .latest-achievement-badge .badge-hard {
       background: url("../images/resources/badges/hard.png");
-      background-color: rgba(14, 34, 24, 0.4);
+      background-color: rgba(255, 255, 255, 0.4);
       background-repeat: no-repeat;
       background-size: 90%;
       background-position: 50% 50%; }
@@ -355,7 +356,7 @@ h1 {
       #stats #latest-achievements .latest-achievement-badge div h5 {
         font-family: Museo300, sans-serif;
         font-size: 16px;
-        color: #a9b539;
+        color: #fff;
         text-align: center;
         line-height: 60px; }
 
@@ -406,7 +407,7 @@ h1 {
           text-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
           word-break: keep-all; }
         #achievements #achievement-box .achievement .achievement-image.temp-pompoensoep {
-          background: url("../images/challenges/pompoensoep_kokoscrème_basilicum.jpg");
+          background: url("../images/challenges/pompoensoep_kokoscreme_basilicum.jpg");
           background-repeat: no-repeat;
           background-size: cover;
           background-position: 0% 50%; }
